testData/invalid-files/invalid-ann-space/030-login.ann
T1	Organization 281 288 288	YouTube